crates/toml_edit/tests/fixtures/invalid/duplicate-keys-cargo.stderr
TOML parse error at line 7, column 1
  |
7 | categories = ["algorithms"]
  | ^
Duplicate key `categories` in table `project`

